# ClusterChat

./: .env.example  .gitignore  DOCUMENTATION.md  Dockerfile.backend  Dockerfile.backend.old  Dockerfile.frontend  Dockerfile.frontend.old  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
analysis/: README.md  abstracts_analysis.ipynb  add_data.ipynb  authors_analysis.ipynb  count_papers.ipynb  mapping_analysis.ipynb
app/: .env.example  .gitignore  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
app/scripts/: creating_arrows.py  read_arrows.py  test.py  utils.py
app/src/: app.css
backend/0. pubmed_data_collection/: pipeline.py  utils.py
backend/1. embedding_data_storage/: config.py  dataset_cleaning.py  helix_script.sh  main.py  main_multiprocess.py  main_sequential.py  utils.py
backend/2. data_clustering/: config.py  main.py  utils.py
backend/2. topic_modelling/: count_bertopic_topics.py  main.py
backend/3. cluster_information/: main.py  utils.py
backend/3. rag_pipeline/: main.py  pipeline.py
backend/4. cluster_information/: dimensionality_reduction_model.py  main.py  main_dimensionality_reduction_model.py
backend/4. rag_pipeline/: main.py  pipeline.py
backend/rag_pipeline/: main.py  pipeline.py  utils.py
backend/scripts_not_used/: opensearch_reindexing.py
cluster/: README.md  cluster_hdbscan.py
embed/: README.md  clean_text_for_embeddings.ipynb  generate_embeddings_server_test.ipynb
embed/scripts/: generate_embeddings_local.py  generate_embeddings_server.py
scripts/: helix_script.sh
transfer/: README.md  pull_topic_embeddings.ipynb  push_cleaned_text.ipynb  push_metadata.ipynb
transfer/scripts/: push_authors.py  push_cleaned_text.py  push_metadata.py
(+111 files in other folders)
